# Linux-sh-package

./: README.md  README.md~
AGX/: AGX刷系统.md  AGX部署开发环境.md
Centos/: Centos Everything - Qt运行时交叉编译环境.md  Centos Everything - 交叉编译环境.md  Centos Mini - docker环境.md  Centos Mini - pytorch环境.md  Centos Mini - 打包环境.md  Centos Mini.md
Firefly/: Ubuntu - ROS2开发环境.md
Mac/: Mac.md
Manjaro/: Manjaro.md
UOS-sh/: 1-更新源.sh  OpenCV.sh  Qt5.sh  README.md  Vim.sh
UOS-sh/DBus/: D-feet.sh
Ubuntu/: Ubuntu - AI开发环境(GPU).md  Ubuntu - AI开发环境.md  Ubuntu - Cheetah源码环境.md  Ubuntu - Qt开发环境.md  Ubuntu - ROS1开发环境.md  Ubuntu - ROS2(Humble)开发环境.md  Ubuntu - ROS2开发环境.md  Ubuntu - ROS2源码与研发环境.md  Ubuntu - ROS2源码环境+开发环境.md  Ubuntu - ROS2源码环境.md  Ubuntu - 交叉编译环境(QEMU).md  Ubuntu - 强化学习开发环境(GPU).md  Ubuntu - 强化学习开发环境.md  Ubuntu - 打包环境.md  Ubuntu(推荐) - 鱼香ROS.md
Ubuntu/Ubuntu - 交叉编译环境/CTest/: CMakeLists.txt  main.cpp
Ubuntu/Ubuntu - 交叉编译环境/QTest_cmake/: CMakeLists.txt  main.cpp
Ubuntu14.04配置sh包/: 1-更新源.sh  1-更新源.sh~  Atom.sh~  atom.sh~  rtl8812au.sh  vnc.sh  vnc.sh~  x11vnc.sh~  右键终端.sh  右键终端.sh~  更新源.sh~
Ubuntu16.04-LTS-sh/: GooglePinYin.sh  Hotspot.sh  KVM虚拟机.sh  MeshLab.sh  Typora.sh  VScode.sh  ZeroMQ.sh  golang.md  gtkterm.sh  mNetAssist.sh  vnc.sh  zsh.sh
Ubuntu16.04配置sh包/: 1-更新源.sh  Docker.sh  Dukto.sh  FreeFileSync.sh  Inkscape.sh  Nodejs.sh  Pycharm.sh  Typora.sh  dia.sh  x11vnc.sh
Windows/: Win10 -  MSVC开发环境.md  Win10 -  MinGW开发环境.md  Win10 - Godot开发环境.md  Win10 - Qt开发环境.md  Win10 - VSCode开发环境.md  Win10 - 基础开发环境.md  Win10 - 机器学习开发环境.md  Win10 - 网站服务器环境.md  Win10.md
(+54 files in other folders)
